📺update to youtube link

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -135,7 +135,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/3450970488729698305"
+                    href="https://www.youtube.com/watch?v=o990EUX3-uk&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=3"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -153,7 +153,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/8050553083151555344"
+                    href="https://www.youtube.com/watch?v=uP9l4E6OBTM&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=10"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -164,7 +164,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/3182153089871025928"
+                    href="https://www.youtube.com/watch?v=lgu_xp-hgEg&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=4""
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -175,7 +175,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/6560317903817450243"
+                    href="https://www.youtube.com/watch?v=KEbnn5uPkZc&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=7"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -186,7 +186,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/1221760141430136838"
+                    href="https://www.youtube.com/watch?v=mYg9XbwpoUo&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=8"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -204,7 +204,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/6917630595543172368"
+                    href="https://www.youtube.com/watch?v=b8_d3GIhCn4&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=11"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -215,7 +215,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/404647080132967184"
+                    href="https://www.youtube.com/watch?v=_eFXysA0EHs&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=5"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -226,7 +226,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/4879705584669658896"
+                    href="https://www.youtube.com/watch?v=R2sQkxCjxG0&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=6"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -237,7 +237,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/8303293422982759696"
+                    href="https://www.youtube.com/watch?v=qKybqIVpquA&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=9"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -255,7 +255,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/2076456709190632456"
+                    href="https://www.youtube.com/watch?v=ErETeZ2usoU&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=2"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -266,7 +266,7 @@
                 <td>
                   <a
                     class="btn btn-outline-danger"
-                    href="https://attendee.gotowebinar.com/recording/3040673431170178064"
+                    href="https://www.youtube.com/watch?v=5Zo-o6DnYcE&list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw&index=1"
                     ><i class="fas fa-dot-circle"></i> Recording Available</a
                   >
                 </td>
@@ -274,11 +274,6 @@
             </tbody>
           </table>
         </div>
-        <a
-          class="btn btn-danger"
-          href="https://www.youtube.com/playlist?list=PL8L0nWYyyMljR9N6dJzrRWlxtwVaybhQw"
-          ><i class="fab fa-youtube"></i> Access Via Youtube</a
-        >
       </div>
     </div>
 
