--- a/sprint/index.html
+++ b/sprint/index.html
@@ -139,7 +139,7 @@
         <div class="text-center text-md-right">
           <h4>The challenge kicks off in</h4>
           <h3><span id="countdown"></span></h3>
-          <h4>Application Results Come out Feb. 16th, 19:00 ET</h4>
+          <h4>Application Results Come out on Feb. 16th, 19:00 ET</h4>
         </div>
       </div>
 
