📃update schedule to table

--- a/sprint/index.html
+++ b/sprint/index.html
@@ -244,46 +244,50 @@
               <br />
             </div>
           </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <p>
-                <i
-                  ><b>
-                    1. Designing and Prototyping a Product/Solution
-                    <br />
-                    2. Target Market, Types of Marketing, Developing a Brand
-                    <br />
-                    3. Social Media Marketing
-                    <br />
-                    4. Financing Your Startup
-                    <br />
-                    5. Types of Investors and How to Attract Them
-                    <br />
-                    6. Creating an Effective Pitch
-                    <br />
-                    7. Demo Day
-                  </b></i
-                >
-              </p>
-            </div>
-            <div class="col-sm-6">
-              <p>
-                February 20, 2021
-                <br />
-                February 27, 2021
-                <br />
-                March 6, 2021
-                <br />
-                March 13, 2021
-                <br />
-                March 20, 2021
-                <br />
-                March 27, 2021
-                <br />
-                April 3, 2021
-              </p>
-            </div>
-          </div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Event</th>
+                <th>Time</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td scope="row">
+                  1. Designing and Prototyping a Product/Solution
+                </td>
+                <td>February 20, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">
+                  2. Target Market, Types of Marketing, Developing a Brand
+                </td>
+                <td>February 27, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">3. Social Media Marketing</td>
+                <td>March 6, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">4. Financing Your Startup</td>
+                <td>March 13, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">
+                  5. Types of Investors and How to Attract Them
+                </td>
+                <td>March 20, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">6. Creating an Effective Pitch</td>
+                <td>March 27, 2021</td>
+              </tr>
+              <tr>
+                <td scope="row">7. Demo Day</td>
+                <td>April 3, 2021</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
 
