update background repeat

--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
     <style>
       body {
         background-image: url("../img/earth.png"), url("../img/stars.png");
-        background-repeat: no-repeat;
+        background-repeat: no-repeat, repeat;
       }
       .vertical-center {
         min-height: 100%; /* Fallback for browsers do NOT support vh unit */
