--- a/sprint/index.html
+++ b/sprint/index.html
@@ -63,7 +63,7 @@
     <style>
       body {
         background-image: url("../img/earth.png"), url("../img/stars.png");
-        background-repeat: no-repeat;
+        background-repeat: no-repeat, repeat;
       }
     </style>
   </head>
