--- a/contact/index.html
+++ b/contact/index.html
@@ -46,7 +46,7 @@
     <style>
       body {
         background-image: url("../img/earth.png"), url("../img/stars.png");
-        background-repeat: no-repeat;
+        background-repeat: no-repeat, repeat;
       }
     </style>
   </head>
