--- a/plenaries/business.html
+++ b/plenaries/business.html
@@ -21,7 +21,7 @@
   <style>
 		body{
 			background-image:url("../img/earth.png"),url("../img/stars.png");
-			background-repeat:no-repeat;
+			background-repeat: no-repeat, repeat;
 		}
 	</style>
 </head>
