--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,21 @@
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="/assets/style/style.css" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-0HCXX7YC7T"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-0HCXX7YC7T');
+    </script>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
