--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,10 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-zinc-900 min-h-screen flex flex-col">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="bg-zinc-900 min-h-screen flex flex-col overflow-x-hidden"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
