feat: add plausible analytics

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,13 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 
+		<!-- Analytics -->
+		<script
+			defer
+			data-domain="worldaffairscon.org"
+			src="https://wac-plausible.taile2b48.ts.net/js/script.js"
+		></script>
+
 		<!-- Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
