--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="description"
+			content="North America's largest and Canada's oldest annual student-run current events conference."
+		/>
 
 		<!-- Analytics -->
 		<script
