fix: fixed starfield + changed title format

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,11 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 
+		<meta
+			name="description"
+			content="North America's largest and Canada's oldest annual student-run current events conference."
+		/>
+
 		<!-- Analytics -->
 		<script
 			defer
